--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -54,7 +54,11 @@
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+        {% if post.disable_title_link %}
+          {{ title }}
+        {% else %}
+          <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+        {% endif %}
       {% endif %}
     </h2>
     
@@ -63,7 +67,9 @@
     {% endif %}
 
         {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p>
+            {% if post.type %}{{ post.type }}, {% endif %}<i>{{ post.venue }}</i>{% if post.date_display %}, {{ post.date_display }}{% elsif post.date %}, {{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}
+          </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
