--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -51,16 +51,25 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
+      {% if post.collection == 'publications' or post.disable_title_link %}
+        {{ title }}
+      {% elsif post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        {% if post.disable_title_link %}
-          {{ title }}
-        {% else %}
-          <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
-        {% endif %}
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
+
+    {% if post.collection == 'publications' %}
+      {% if post.authors %}
+        <p class="page__meta">{{ post.authors | markdownify | remove: '<p>' | remove: '</p>' }}</p>
+      {% endif %}
+      {% if post.pubinfo %}
+        <p class="page__meta">{{ post.pubinfo | markdownify | remove: '<p>' | remove: '</p>' }}</p>
+      {% elsif post.venue or post.date %}
+        <p class="page__meta">{% if post.venue %}<i>{{ post.venue }}</i>{% endif %}{% if post.venue and post.date %}, {% endif %}{% if post.date %}{{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}</p>
+      {% endif %}
+    {% endif %}
     
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
@@ -71,7 +80,7 @@
             {% if post.type %}{{ post.type }}, {% endif %}<i>{{ post.venue }}</i>{% if post.date_display %}, {{ post.date_display }}{% elsif post.date %}, {{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}
           </p>
         {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
