--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -51,7 +51,13 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.collection == 'publications' or post.disable_title_link %}
+      {% if post.collection == 'publications' %}
+        {% if post.paperurl %}
+          <a href="{{ paper_href }}">{{ title }}</a>
+        {% else %}
+          {{ title }}
+        {% endif %}
+      {% elsif post.disable_title_link %}
         {{ title }}
       {% elsif post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
@@ -62,12 +68,12 @@
 
     {% if post.collection == 'publications' %}
       {% if post.authors %}
-        <p class="page__meta">{{ post.authors | markdownify | remove: '<p>' | remove: '</p>' }}</p>
+        <p>{{ post.authors | markdownify | remove: '<p>' | remove: '</p>' }}</p>
       {% endif %}
       {% if post.pubinfo %}
-        <p class="page__meta">{{ post.pubinfo | markdownify | remove: '<p>' | remove: '</p>' }}</p>
+        <p>{{ post.pubinfo | markdownify | remove: '<p>' | remove: '</p>' }}</p>
       {% elsif post.venue or post.date %}
-        <p class="page__meta">{% if post.venue %}<i>{{ post.venue }}</i>{% endif %}{% if post.venue and post.date %}, {% endif %}{% if post.date %}{{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}</p>
+        <p>{% if post.venue %}<i>{{ post.venue }}</i>{% endif %}{% if post.venue and post.date %}, {% endif %}{% if post.date %}{{ post.date | default: "1900-01-01" | date: "%Y" }}{% endif %}</p>
       {% endif %}
     {% endif %}
     
@@ -91,33 +97,35 @@
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
     
-    {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ slides_href }}">Download Slides</a></p>
-    {% elsif post.citation and post.paperurl and post.bibtexurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a></p>
-    {% elsif post.citation and post.slidesurl and post.bibtexurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.citation and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ slides_href }}">Download Slides</a></p>
-    {% elsif post.citation and post.bibtexurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.citation %}
-      <p>Recommended citation: {{ post.citation }}</p>
-    {% elsif post.paperurl and post.bibtexurl %}
-      <p><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.paperurl %}
-      <p><a href="{{ paper_href }}">Download Paper</a></p>
-    {% elsif post.slidesurl and post.bibtexurl %}
-      <p><a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% elsif post.slidesurl %}
-      <p><a href="{{ slides_href }}">Download Slides</a></p>
-    {% elsif post.bibtexurl %}
-      <p><a href="{{ bibtex_href }}">Download Bibtex</a></p>
-    {% endif %}
+    {% unless post.collection == 'publications' %}
+      {% if post.citation and post.paperurl and post.slidesurl and post.bibtexurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.citation and post.paperurl and post.slidesurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ slides_href }}">Download Slides</a></p>
+      {% elsif post.citation and post.paperurl and post.bibtexurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.citation and post.paperurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ paper_href }}">Download Paper</a></p>
+      {% elsif post.citation and post.slidesurl and post.bibtexurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.citation and post.slidesurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ slides_href }}">Download Slides</a></p>
+      {% elsif post.citation and post.bibtexurl %}
+        <p>Recommended citation: {{ post.citation }}<br /><a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.citation %}
+        <p>Recommended citation: {{ post.citation }}</p>
+      {% elsif post.paperurl and post.bibtexurl %}
+        <p><a href="{{ paper_href }}">Download Paper</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.paperurl %}
+        <p><a href="{{ paper_href }}">Download Paper</a></p>
+      {% elsif post.slidesurl and post.bibtexurl %}
+        <p><a href="{{ slides_href }}">Download Slides</a> | <a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% elsif post.slidesurl %}
+        <p><a href="{{ slides_href }}">Download Slides</a></p>
+      {% elsif post.bibtexurl %}
+        <p><a href="{{ bibtex_href }}">Download Bibtex</a></p>
+      {% endif %}
+    {% endunless %}
 
   </article>
 </div>
